--- a/client/src/app/pages/jogo-palavras/jogo-palavras.component.html
+++ b/client/src/app/pages/jogo-palavras/jogo-palavras.component.html
@@ -11,6 +11,7 @@
 <div
   class="grid p-fluid align-content-center"
   style="height: calc(calc(100svh / var(--zoom)) - 200px)"
+  *ngIf="selectedPalavra"
 >
   <div class="feedback">
     <app-feedback
