--- a/client/src/app/pages/pagina-inicial/pagina-inicial.component.css
+++ b/client/src/app/pages/pagina-inicial/pagina-inicial.component.css
@@ -23,8 +23,26 @@
   width: 300px;
 }
 
+.button-game {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 12px !important;
+  height: 80px;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  color: #ffffff;
+  background: linear-gradient(90deg, #87ceeb, #4682b4);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
+}
+
 .button-game:hover {
-  scale: 1.1;
+  scale: 1.05;
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3);
+  background: linear-gradient(90deg, #4682b4, #87ceeb);
 }
 
 .avatar-personagem {
@@ -49,6 +67,7 @@
 
 .container-selecao {
   width: 300px;
+  height: calc(100svh / var(--zoom) - 400px);
   max-height: 400px;
   overflow-y: scroll;
   scrollbar-width: none;
@@ -62,18 +81,45 @@
   display: flex;
   flex-direction: column;
   width: 90%;
-  gap: 30px;
+  gap: 40px;
 }
 
 .button-selecao {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
   width: 100%;
-  height: 48px;
-  font-size: 16px;
   margin: 10px;
+  height: 80px;
+  font-size: 18px;
+  padding: 0 15px;
+  border: 2px solid #ccc;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+  color: #333;
+  cursor: pointer;
+  transition: background-color 0.3s, box-shadow 0.3s;
 }
 
 .button-selecao:hover {
+  background-color: #e0e0e0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   scale: 1.05;
+}
+
+.button-selecao img.avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 15px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.button-selecao span {
+  flex: 1;
+  text-align: left;
+  font-weight: bold;
 }
 
 .dificuldade-card {
