--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -20366,7 +20366,7 @@ body {
 }
 
 body.custom-background {
-  background-image: url("/assets/battleback.png");
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("/assets/planeta.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -20406,24 +20406,6 @@ body.custom-background {
 
 .imagem-lista {
   max-width: 100px;
-}
-
-.button-game {
-  border-radius: 12px !important;
-  height: 80px;
-  width: 100%;
-  text-align: center;
-  justify-content: center;
-  font-size: 20px;
-}
-.button-game .grid {
-  width: 100%;
-  text-align: center;
-}
-.button-game .grid .col-fixed {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 .confirm-button-danger {
