--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -22,7 +22,16 @@ body {
 }
 
 body.custom-background {
-  background-image: url('/assets/battleback.png');
+  // background-image: url('/assets/planeta.jpg');
+
+  // background-image: url('/assets/battleback.png');
+
+  // background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+  //   url("/assets/planeta.jpg");
+
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("/assets/planeta.jpg");
+
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -46,18 +55,18 @@ body.custom-background {
 
 .grupo-scroll {
   flex: 1;
-  overflow-y: auto; 
+  overflow-y: auto;
   // height: calc(100vh - 250px);
   height: calc(calc(100svh / var(--zoom)) - 300px);
   scrollbar-width: none;
-  padding: 0px 16px; 
+  padding: 0px 16px;
   box-sizing: border-box;
 }
 
 .rodape {
   position: sticky;
-  bottom: 0; 
-  padding: 8px 16px; 
+  bottom: 0;
+  padding: 8px 16px;
   display: flex;
 }
 
@@ -65,26 +74,8 @@ body.custom-background {
   max-width: 100px;
 }
 
-.button-game {
-  border-radius: 12px !important;
-  height: 80px;
-  width: 100%;
-  text-align: center;
-  justify-content: center;
-  font-size: 20px;
-  .grid {
-    width: 100%;
-    text-align: center;
-  }
-  .grid .col-fixed {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-}
-
 .confirm-button-danger {
-  background-color: #dc3545 !important; 
+  background-color: #dc3545 !important;
   border-color: #dc3545 !important;
   color: #fff !important;
 }
@@ -113,15 +104,13 @@ body.custom-background {
   }
 }
 
-
-
 .pulse-button {
-  animation: pulse-infinite 1.5s infinite; 
+  animation: pulse-infinite 1.5s infinite;
 }
 
 @keyframes pulse-infinite {
   0% {
-    transform: scale(1); 
+    transform: scale(1);
   }
   50% {
     transform: scale(1.2);
@@ -144,5 +133,5 @@ body.custom-background {
 }
 
 .pulse-once {
-  animation: pulse-once 0.6s ease; 
+  animation: pulse-once 0.6s ease;
 }
