Contabilizar pontuação e ajustes gerais

--- a/client/src/app/components/app-header/app-header.component.html
+++ b/client/src/app/components/app-header/app-header.component.html
@@ -2,9 +2,10 @@
   <div class="header-content">
     <a href="">
       <img
-        src="https://www.gov.br/mdh/pt-br/ondh/centrais-de-conteudo/imagens/libras.png"
+        src="assets/senai_libras.png"
         alt="Logo do Jogo Libras"
-        width="80px"
+        width="50px"
+        style="margin-right: 20px;"
       />
     </a>
     <a href="" style="text-decoration: none; color: inherit">
