--- a/client/src/app/components/pontuacao/pontuacao.component.html
+++ b/client/src/app/components/pontuacao/pontuacao.component.html
@@ -12,7 +12,7 @@
       <span class="placar-value">{{ erros }}</span>
     </div>
     <div class="pt-2">
-      <p-rating [(ngModel)]="pontuacao" [readonly]="true" [cancel]="false" />
+      <p-rating [(ngModel)]="somatoria" [readonly]="true" [cancel]="false" />
     </div>
   </div>
 </div>
