--- a/client/src/app/pages/jogo-adivinhacao/jogo-adivinhacao.component.html
+++ b/client/src/app/pages/jogo-adivinhacao/jogo-adivinhacao.component.html
@@ -1,9 +1,9 @@
 <p-toast />
 
 <app-pontuacao
-  [jogador]="'João Silva'"
-  [acertos]="0"
-  [erros]="0"
+  [acertos]="acertos"
+  [erros]="erros"
+  [atividade]="'JOGO_ADIVINHACAO'"
 ></app-pontuacao>
 
 <app-personagem></app-personagem>
