--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -135,3 +135,7 @@ body.custom-background {
 .pulse-once {
   animation: pulse-once 0.6s ease;
 }
+
+// .p-dialog-header {
+//   padding-bottom: 0px !important;
+// }
