--- a/client/src/app/pages/jogo-palavras/jogo-palavras.component.html
+++ b/client/src/app/pages/jogo-palavras/jogo-palavras.component.html
@@ -1,7 +1,7 @@
 <app-pontuacao
-  [jogador]="'João Silva'"
-  [acertos]="0"
-  [erros]="0"
+  [acertos]="acertos"
+  [erros]="erros"
+  [atividade]="'JOGO_PALAVRAS'"
 ></app-pontuacao>
 
 <app-personagem></app-personagem>
