--- a/client/src/app/pages/pagina-inicial/pagina-inicial.component.css
+++ b/client/src/app/pages/pagina-inicial/pagina-inicial.component.css
@@ -128,4 +128,21 @@
   padding: 15px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.custom-transparent-button {
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  font-weight: bold;
+  color: #ffffff;
+  background: linear-gradient(90deg, rgba(135, 206, 235, 0.5), rgba(70, 130, 180, 0.5));
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out;
+}
+.custom-transparent-button:hover {
+  background: linear-gradient(90deg, rgba(70, 130, 180, 0.5), rgba(135, 206, 235, 0.5));
+  border-color: black;
+}
+.custom-transparent-button:focus {
+  outline: none;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
 }/*# sourceMappingURL=pagina-inicial.component.css.map */
