--- a/client/src/app/pages/pagina-inicial/pagina-inicial.component.scss
+++ b/client/src/app/pages/pagina-inicial/pagina-inicial.component.scss
@@ -136,3 +136,22 @@
   border-radius: 8px; 
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
+.custom-transparent-button {
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  font-weight: bold;
+  color: #ffffff;
+  background: linear-gradient(90deg, rgba(135, 206, 235, 0.5), rgba(70, 130, 180, 0.5));
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease-in-out; 
+
+  &:hover {
+    background: linear-gradient(90deg,  rgba(70, 130, 180, 0.5), rgba(135, 206, 235, 0.5));
+    border-color: black; 
+  }
+
+  &:focus {
+    outline: none; 
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+  }
+}
