--- a/client/src/app/pages/usuario/tela-perfil-usuario/tela-perfil-usuario.component.html
+++ b/client/src/app/pages/usuario/tela-perfil-usuario/tela-perfil-usuario.component.html
@@ -6,7 +6,7 @@
     <div class="col-12">
       <p-panel header="Dados do usuário">
         <div class="grid p-fluid">
-          <div class="col-6">
+          <div class="col">
             <label for="nome">Nome</label>
             <input
               class="mt-2"
@@ -14,9 +14,21 @@
               type="text"
               pInputText
               [(ngModel)]="usuario.nome"
+              [readOnly]="true"
             />
           </div>
-          <div class="col-6">
+          <div class="col">
+            <label for="nome">Usuário</label>
+            <input
+              class="mt-2"
+              id="nome"
+              type="text"
+              pInputText
+              [(ngModel)]="usuario.username"
+              [readOnly]="true"
+            />
+          </div>
+          <div class="col">
             <label for="email">Email</label>
             <input
               class="mt-2"
