--- a/client/src/app/components/app-header/app-header.component.html
+++ b/client/src/app/components/app-header/app-header.component.html
@@ -8,8 +8,9 @@
         style="margin-right: 20px;"
       />
     </a>
-    <a href="" style="text-decoration: none; color: inherit">
-      <h1 class="site-name">Jogo Libras</h1>
+    <a href="" class="site-name-wrapper">
+      <h2 class="site-name">ALFABETIZA LIBRAS</h2>
+      <span class="site-tagline">Jogos Interativos</span>
     </a>
     <div class="menu-container grid align-items-center pt-1">
       <div class="col-fixed">
@@ -38,3 +39,4 @@
     </div>
   </div>
 </header>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
