02/02/2025 - Correções sugeridas pela prof. Rúbia

--- a/client/src/app/components/tutorial/tutorial.component.html
+++ b/client/src/app/components/tutorial/tutorial.component.html
@@ -11,9 +11,7 @@
 <div class="tutorial-overlay" *ngIf="visible">
   <img class="tutorial-gif" [src]="tutorial" alt="Tutorial" />
   <p-button
-    label="Concluído"
-    icon="pi pi-check"
-    iconPos="right"
+    label="Retornar"
     (onClick)="visible = false"
   ></p-button>
 </div>
