--- a/client/src/app/pages/personagem/tela-lista-personagem/tela-lista-personagem.component.html
+++ b/client/src/app/pages/personagem/tela-lista-personagem/tela-lista-personagem.component.html
@@ -22,7 +22,7 @@
             <td>{{ personagem.nome }}</td>
             <td>
               <p-button
-                icon="pi pi-history"
+                icon="pi pi-eye"
                 [rounded]="true"
                 [text]="true"
                 [raised]="true"
