--- a/client/src/app/pages/pagina-inicial/pagina-inicial.component.css
+++ b/client/src/app/pages/pagina-inicial/pagina-inicial.component.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .container {
   display: flex;
   align-items: center;
@@ -90,7 +91,7 @@
   justify-content: flex-start;
   width: 100%;
   margin: 10px;
-  height: 80px;
+  height: 72px;
   font-size: 18px;
   padding: 0 15px;
   border: 2px solid #ccc;
@@ -99,6 +100,7 @@
   color: #333;
   cursor: pointer;
   transition: background-color 0.3s, box-shadow 0.3s;
+  position: relative;
 }
 
 .button-selecao:hover {
@@ -120,6 +122,20 @@
   flex: 1;
   text-align: left;
   font-weight: bold;
+}
+
+.button-selecao i.pi-trash {
+  position: absolute;
+  bottom: 10px;
+  right: 9px;
+  font-size: 14px; /* Mantém o ícone pequeno */
+  color: #666;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.button-selecao i.pi-trash:hover {
+  color: #ff4d4d;
 }
 
 .dificuldade-card {
